--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -1,9 +1,9 @@
 include(FetchContent)
 
 FetchContent_Declare(
-  googletest
-  GIT_REPOSITORY https://github.com/google/googletest.git
-  GIT_TAG release-1.12.1
+    googletest
+    GIT_REPOSITORY https://github.com/google/googletest.git
+    GIT_TAG release-1.12.1
 )
 
 # For Windows: Prevent overriding the parent project's compiler/linker settings
@@ -13,18 +13,18 @@ FetchContent_MakeAvailable(googletest)
 enable_testing()
 
 add_executable(
-  number_tests
-  number_test.cpp
+    argparser_tests
+    argparser_test.cpp
 )
 
 target_link_libraries(
-  number_tests
-  number
-  GTest::gtest_main
+    argparser_tests
+    argparser
+    GTest::gtest_main
 )
 
-target_include_directories(number_tests PUBLIC ${PROJECT_SOURCE_DIR})
+target_include_directories(argparser_tests PUBLIC ${PROJECT_SOURCE_DIR})
 
 include(GoogleTest)
 
-gtest_discover_tests(number_tests)
+gtest_discover_tests(argparser_tests)
