--- a/bin/CMakeLists.txt
+++ b/bin/CMakeLists.txt
@@ -1,11 +1,4 @@
 add_executable(${PROJECT_NAME} main.cpp)
 
-target_link_libraries(${PROJECT_NAME} PRIVATE number)
+target_link_libraries(${PROJECT_NAME} PRIVATE argparser)
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR})
-
-
-cmake_minimum_required(VERSION 3.23)
-project(untitled)
-
-set(CMAKE_CXX_STANDARD 20)
-add_executable(main.cpp "main.cpp")
