--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -1,27 +1,36 @@
-
-        
-        
-name: Build GUI exe with Pyinstaller
+name: Python package
 
 on:
-  workflow_dispatch:
-    inputs:
-      tags:
-        description: 'test build tags'
-jobs:
-  build:
+  push:
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
-    runs-on: ubuntu-latest
+jobs:
+  
+  build:
+    # Windows is currently the only platform this action supports
+    runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v2
+    
+      # Check-out repository
+      - uses: actions/checkout@v3
 
-    - name: Package Application
-      uses: JackMcKew/pyinstaller-action-windows@main
-      with:
-        path: .
+      # Setup Python
+      - uses: actions/setup-python@v4
+        with:
+          python-version: '3.x' # Version range or exact version of a Python version to use, using SemVer's version range syntax
+          architecture: 'x64' # optional x64 or x86. Defaults to x64 if not specified
 
-    - uses: actions/upload-artifact@v2
-      with:
-        name: my-app
-        path: dist/windows
+      # Build python script into a stand-alone exe
+      - uses: Nuitka/Nuitka-Action@v0.4
+        with:
+          script-name: hello_world.py
+
+      # Uploads artifact
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: exe
+          path: build/hello_world.exe
